// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Avatar renders with width and height 1`] = `
<DocumentFragment>
  <span
    alt="Great alt"
    class="chakra-avatar css-11zvsst"
  >
    <svg
      aria-label=" avatar"
      class="chakra-avatar__svg css-16ite8i"
      role="img"
      viewBox="0 0 128 128"
    >
      <path
        d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
        fill="currentColor"
      />
      <path
        d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
        fill="currentColor"
      />
    </svg>
    <img
      alt="http://great-url.com"
      data-nimg="1"
      decoding="async"
      height="40"
      loading="lazy"
      src="/_next/image?url=http%3A%2F%2Fgreat-url.com&w=96&q=75"
      srcset="/_next/image?url=http%3A%2F%2Fgreat-url.com&w=48&q=75 1x, /_next/image?url=http%3A%2F%2Fgreat-url.com&w=96&q=75 2x"
      style="color: transparent;"
      width="40"
    />
  </span>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.Avatar renders without width and height 1`] = `
<DocumentFragment>
  <span
    alt="Other alt"
    class="chakra-avatar css-wj3r0b"
  >
    <svg
      aria-label=" avatar"
      class="chakra-avatar__svg css-16ite8i"
      role="img"
      viewBox="0 0 128 128"
    >
      <path
        d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
        fill="currentColor"
      />
      <path
        d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
        fill="currentColor"
      />
    </svg>
    <img
      alt="http://great-url.com"
      data-nimg="1"
      decoding="async"
      height="0"
      loading="lazy"
      src="/_next/image?url=http%3A%2F%2Fgreat-url.com&w=16&q=75"
      srcset="/_next/image?url=http%3A%2F%2Fgreat-url.com&w=16&q=75 1x"
      style="color: transparent;"
      width="0"
    />
  </span>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
